<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConversationServiceTrainer</string>
    <string name="filename">Filename : </string>
    <string name="staraiml">*.aiml</string>
    <string name="star">*</string>
    <string name="down_arrow">\\/</string>
    <string name="up_arrow">/\\</string>
    <string name="set_response">Set Response</string>
    <string name="current">Current Response</string>
    <string name="currentResponse">Response</string>
    <string name="patternname">Pattern</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="title_activity_view_file">ViewFileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="depth">Depth : </string>
    <string name="number">0</string>
    <string name="title_activity_advanced_settings">AdvancedSettings</string>
    <string name="template_button">template</string>
    <string name="randomli_button">random/li</string>
    <string name="srai">SRAI template</string>
    <string name="view_aiml_tags">View AIML Tags</string>
    <string name="close_aiml_tags">Close AIML Tags</string>
    <string name="select_srai">SELECT SRAI</string>
    <string name="resync_action">Resync AIML Files</string>
    <string name="add_new_aiml_file">Add New AIML File</string>
    <string name="top_xml_string">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?></string>
    <string name="create_file">Create File</string>
    <string name="new_file_name_hint">New File Name</string>
    <string name="aiml_extension">.aiml</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_reduction_dialog_prompt">Do you want to remove this reduction?</string>
    <string name="new_reduction_dialog_prompt">Do you want to add a new reduction?</string>
    <string name="title_activity_new_reduction">NewReduction</string>
    <string name="create_reduction">Add Reduction</string>
    <string name="get_response">Get Response</string>
    <string name="input_tv">Input</string>
    <string name="response_text">Response</string>
    <string name="choose_file">Choose file to add reduction to …</string>
    <string name="add_new_reduction_question">Add New Reduction?</string>
    <string name="connect_to_service">Click to start/connect to service</string>
</resources>
