<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/new_file_name_dialog_et"
            android:background="@color/BlanchedAlmond"
            android:hint="@string/new_file_name_hint"
            android:textColor="@color/Purple"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:padding="5dp"/>
        <TextView
            android:text="@string/aiml_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:padding="2dp"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <Button
            android:id="@+id/create_file_dialog_cancel_button"
            android:text="@string/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/red_selector"
            android:padding="10dp"/>

        <Button
            android:id="@+id/create_file_dialog_ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:layout_weight="0.5"
            android:background="@drawable/green_selector"
            android:padding="10dp"
            />
        </LinearLayout>

</LinearLayout>